--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,6 +6,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-color: lavenderblush;
 }
 
 .container {
@@ -14,7 +14,7 @@ body {
   margin: 30px auto;
   overflow: auto;
   min-height: 300px;
-  border: 1px solid steelblue;
+  border: 2px solid rgb(10, 10, 10);
   padding: 30px;
   border-radius: 5px;
 }
@@ -28,8 +28,8 @@ body {
 
 .btn {
   display: inline-block;
-  background: #000;
-  color: #fff;
+  background: black;
+  color: white;
   border: none;
   padding: 10px 20px;
   margin: 5px;
@@ -108,4 +108,4 @@ body {
 footer {
   margin-top: 30px;
   text-align: center;
-} */
+}
